refactor(mobilertapp): Fix some linter warnings
Test plan:
* Pipeline passes